# kestrel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindVectorscan.cmake
include/kestrel/: app.hpp  config.hpp  group_matcher.hpp  line_index.hpp  scanner.hpp  search.hpp  search_worker.hpp  source.hpp  timestamp_index.hpp  ui.hpp  util.hpp  window.hpp
src/: app.cpp  config.cpp  main.cpp  search.cpp  search_worker.cpp  util.cpp
src/engine/: group_matcher.cpp  line_index.cpp  scanner.cpp  source.cpp  timestamp_index.cpp
src/ui/: dialogs.cpp  main_menu.cpp  minimap.cpp  results.cpp  search_bar.cpp  status_bar.cpp  ui.cpp  ui_internal.hpp  window.cpp
tests/: CMakeLists.txt  config_test.cpp  line_index_test.cpp  parse_cli_test.cpp  scanner_test.cpp  search_controller_test.cpp  source_test.cpp
